# python_web_hw8

./: main.py  pyproject.toml  seed.py
MongoDB/: main.py
RabbitMQ/: config.ini  consumer.py  producer.py  pyproject.toml  seed.py
RabbitMQ/config/: models.py
config/: db.py  models.py
